@@ -13,4 +13,6 @@ Bug fixes:
 
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- FlexibleTypeInformation is now a subclass of FactoryTypeInformation,
+  which means that the factory method can be changed. So subclasses
+  of CPSDocument can be created.
